- Added logic using python and AJAX. - Need to add winner checking at the end of every turn and generate appropriate messages. - Fixed CSS to work on smaller displays

--- a/app/static/CSS/styles.css
+++ b/app/static/CSS/styles.css
@@ -29,4 +29,6 @@
 	font-size: 200%;
 	width: 100%;
 	text-align: center;
+	box-shadow: black;
 }
+
